<resources>
    <string name="app_name">City App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="signing_in">Signing in…</string>
    <string name="play_error">Google Play Services error.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="login_failed">Failed to login! Please login to access the application.</string>
    <string name="try_again">Try Again</string>
    <string name="quit_app">Quit App</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="enable_provider">Enabled new provider</string>
    <string name="disable_provider">Disabled provider</string>
    <string name="gps_failed">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="setting_test">Settings</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="menu_orders_abjad">Sort by name</string>
    <string name="menu_orders_distance">Sort by distance</string>
    <string name="alert_anon_temporary">You\'ve signed in with a temporary profile, you can\'t access this features</string>
    <string name="crop_image_activity_title">Select Image</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected error occurred. We\'re deeply sorry. We will fix it as soon as posible!</string>
    <string name="customactivityoncrash_error_activity_error_title">Something went wrong.</string>
    <string name="customactivityoncrash_error_activity_unknown_exception">Unknown exception</string>
    <string name="customactivityoncrash_error_activity_restart_app">RESTART APP</string>
    <string name="customactivityoncrash_error_activity_close_app">CLOSE APP</string>
    <string name="customactivityoncrash_error_activity_error_details">ERROR DETAILS</string>
    <string name="customactivityoncrash_error_activity_error_report">REPORT ERROR</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_reported">Thank you! An error has been reported!</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="about_contact_us">Contact us</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_play_store">Rate us on the Play Store</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="about_twitter">Follow us on Twitter</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about_website">Visit our website</string>
    <string name="str_about">About</string>
    <string name="str_version">Version</string>
    <string name="filename_exist">File is exist</string>
    <string name="nav_title_categories">Categories</string>
    <string name="nav_title_all_place">All Places</string>
    <string name="nav_title_online_map">Online Map</string>
    <string name="nav_title_offline_map">Offline Map</string>
    <string name="nav_title_rates_and_reviews"><![CDATA[Rates & Reviews]]></string>
    <string name="nav_title_gallery">Gallery</string>
    <string name="can_not_get_route">Can\'t get route</string>
    <string name="no_image_found">No images yet!</string>
    <string name="description_activity_category">Category</string>
    <string name="description_activity_description">Description</string>
    <string name="description_activity_information">Information</string>
    <string name="description_activity_address">Address</string>
    <string name="description_activity_info">Info</string>
    <string name="description_activity_facilities">Facilities</string>
    <string name="description_activity_btn_show_direction">Show Direction</string>
    <string name="description_activity_btn_show_on_map">Show on Map</string>
    <string name="description_activity_image_gallery">Image Gallery</string>
    <string name="description_activity_gallery_is_not_found">No images yet!</string>
    <string name="description_activity_btn_upload_image">Upload Image</string>
    <string name="description_activity_btn_show_all_image">Show All Image</string>
    <string name="description_activity_reviews">Reviews</string>
    <string name="description_activity_review_is_null">No review yet!</string>
    <string name="description_activity_btn_show_all">Show All</string>
    <string name="hint_review">Review</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="sign_in_information">Sign in with your google account is recommended. This won\'t share any of your personal information!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="sign_in_as_anon">Skip >></string>
    <string name="hint_from">Origin</string>
    <string name="hint_to">Destination</string>
    <string name="route_to">Route to</string>
    <string name="no_reviews">Reviews is not found</string>
    <string name="nav_title_map">Map</string>
    <string name="nav_ar_map">AR Location</string>
    <string name="nav_title_my_activities">My Activities</string>
    <string name="nav_title_sign_out">Sign Out</string>
    <string name="hint_search">Search</string>
    <string name="hint_share">Share</string>
    <string name="search_hint">Search..</string>
    <string name="txt_choose">Choose</string>
    <string name="txt_deleting">Deleting…</string>

    <string name="intro1">Amazing android City App with cool features</string>
    <string name="intro2">We need to use the camera to take a pictures</string>
    <string name="intro3">We need to read and write to your phone storage</string>
    <string name="intro4">We need to access your device location to find an amazing place.</string>
    <string name="intro5">Let\'s start.</string>

    <string name="year">year</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="ago">ago</string>

    <string name="ar_activity_use_orientation_menu">Use orientation sensor</string>
    <string name="direction_language">en</string> <!-- en (English) -->
    <string name="ar_activity_use_rotation_menu">Use rotation sensor</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="firebase_error">Some error on firebase database!</string>
    <string name="internet_not_connect">Your internet is not connected!</string>
    <string name="snackbar_force">FORCE</string>
    <string name="upload_error">Upload Failure, Check your internet connection!</string>
    <string name="upload_success">Image Upload success!</string>
    <string name="share_place">Share this place to your friend!</string>

    <!-- - - - - - - ADS UNIT ID CONFIGURATION - - - - - - - - - - - -->
    <string name="banner_ad_unit_id">ca-app-pub-4317818705835152/5966021028</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4317818705835152/7920432223</string>
    <string name="native_ad_unit_id">ca-app-pub-4317818705835152/6443699020</string>

    <!-- - - - - - - ABOUT CONFIG- - - - - - - - -->
    <string name="facebook_id">ihsan.badruzaman</string>
    <string name="twitter_id">ihsan_bz</string>
    <string name="instagram_id">ihsan_bz</string>
    <string name="email_id">ihsanbadru@gmail.com</string>
    <string name="youtube_id">gaexjro</string>
    <string name="url">blogger-dot-blogspot.blogspot.com</string>
    <string name="app_description">Visit The City is an application of information of important places (Point of Interest) for the City. This application can help the local tourists or from out of town to find places to visit online or offline</string>

    <string name="facebook_app_id">853393454823865</string>
    <string name="fb_login_protocol_scheme">fb853393454823865</string>

</resources>
