<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_login"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:cardBackgroundColor="#7f000000"
        app:cardCornerRadius="0dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_app" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.FontPath.Bold"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/sign_in_information"
                android:textAppearance="@style/TextAppearance.FontPath.Bold"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_google_plus_logo_button"
                android:drawablePadding="16dp"
                android:drawableTint="@android:color/white"
                android:gravity="start|center"
                android:padding="16dp"
                android:text="@string/sign_in_with_google"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.FontPath.Bold"
                android:textColor="@android:color/white"
                android:theme="@style/MyButtonGoogle" />

            <Button
                android:id="@+id/sign_in_button_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_facebook_logo_button"
                android:drawablePadding="16dp"
                android:drawableTint="@android:color/white"
                android:gravity="start|center"
                android:padding="16dp"
                android:text="@string/sign_in_with_fb"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.FontPath.Bold"
                android:textColor="@android:color/white"
                android:theme="@style/MyButtonFacebook" />

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/sign_in_anon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableTint="@android:color/white"
                android:gravity="end|center"
                android:padding="16dp"
                android:text="@string/sign_in_as_anon"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.FontPath.Bold"
                android:textColor="@android:color/white"
                style="@style/Widget.AppCompat.Button.Borderless" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>