<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/dialogBack"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_app_bar"
            android:transitionName="imageThumbnail" />

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/dialogJudul"
            android:background="@drawable/bg_gradient"
            android:paddingTop="16dp">

        </RelativeLayout>

        <TextView
            android:id="@+id/dialogJudul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/dialogDesk"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-2"
            android:shadowDy="-2"
            android:shadowRadius="2"
            android:textAppearance="@style/TextAppearance.FontPath.Bold"
            android:textColor="@color/light_font"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogDesk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-2"
            android:shadowDy="-2"
            android:shadowRadius="2"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <RatingBar
        android:id="@+id/ratingBarDialog"
        style="?attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1" />

    <EditText
        android:id="@+id/editTextUlasan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_review" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnHapusRate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/btnSimpanRate"
            android:layout_toStartOf="@+id/btnSimpanRate"
            android:text="@string/btn_delete"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnBatalRate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnHapusRate"
            android:layout_toStartOf="@+id/btnHapusRate"
            android:text="@string/btn_cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSimpanRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:theme="@style/MyButton2" />
    </RelativeLayout>

</LinearLayout>